feat: create user-service